--- a/Basic Resouce/css/style.css
+++ b/Basic Resouce/css/style.css
@@ -9,6 +9,8 @@
 }
 body {
   background-color: #5b2386;
+  width: 100%;
+  height: 100vh;
 }
 .ir {
   position: absolute;
@@ -19,7 +21,13 @@ body {
   overflow: hidden;
 }
 
+.hidden {
+  display: none;
+  overflow: hidden;
+}
+
 .wrapper {
+  position: relative;
   width: 960px;
   margin: 0 auto;
   text-align: center;
@@ -175,19 +183,6 @@ input:focus {
 .result {
   margin-top: 147px;
 }
-/* 
-.result span {
-  padding-top: 24px;
-  padding-bottom: 24px;
-} */
-/* .result-box {
-  margin: 0 auto;
-  width: 663px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-} */
 
 .result-line {
   display: flex;
@@ -202,7 +197,7 @@ input:focus {
   font-weight: 700;
 }
 
-/* btn-result 네이밍바꿀까>>  */
+/* btn-result 네이밍 변경 고민 */
 
 .btn-result {
   margin-top: 127px;
@@ -229,14 +224,20 @@ input:focus {
   line-height: 17.38px;
 }
 
-/* 모달창 */
-.modal {
+/* MODAL */
+
+#modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
   width: 800px;
   height: 800px;
   background-color: #fff;
   border-radius: 30px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-  margin: 0 auto;
 }
 
 .modal-wrapper {
